app/components/Speaker.module.css
.speaker {
  text-decoration: none;
  display: grid;
  grid-template-columns: 1fr 2fr;
  border-radius: 16px;
  background-color: #d17b93;
  margin: 1rem;
}

.speaker h2,
.speaker a,
.speaker p {
  color: black;
}

.speaker img {
  border-radius: 16px 0 0 16px;
}

.info {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 1rem;
}

/* .info:before {
  content: "";
  position: absolute;
  width: 100%;
  height: 200px;
  border-left: 30px solid white;
  border-inline-start-width: 30px;
  border-image: url("/magnolia-flower-only-30px.png") 16;
  border-image-repeat: space;
  transform: skewX(5deg);
}
 */
.info h2 {
  margin-bottom: 0.5rem;
}

